--- a/agenda21.html
+++ b/agenda21.html
@@ -28,13 +28,13 @@ La Agenda 21 se organiza en 40 capítulos, agrupados en cuatro grandes bloques. 
 <p>1. Dimensiones sociales y económicas: Busca mejorar la calidad de vida de las personas, especialmente en países en desarrollo.</p>
 
 </p>
-      <img src="objetivos-de-desarrollo-sostenible-1920x1024.jpg" alt="Agenda 21">
+      <img src="img/objetivos-de-desarrollo-sostenible-1920x1024.jpg" alt="Agenda 21">
     </section>
 
     <section class="content-block">
       <h2>Relación con el Desarrollo Sustentable</h2>
       <p>El desarrollo sustentable busca satisfacer las necesidades del presente sin comprometer las de las futuras generaciones. Se basa en tres pilares: Ambiental, Económico y Social.</p>
-      <img src="sustainable-development-aim-of-agenda-21---teachoo.jpg" alt="Desarrollo Sustentable">
+      <img src="img/sustainable-development-aim-of-agenda-21---teachoo.jpg" alt="Desarrollo Sustentable">
     </section>
 
     <section class="content-block">
@@ -55,7 +55,7 @@ La Agenda 21 se organiza en 40 capítulos, agrupados en cuatro grandes bloques. 
     <section class="content-block hidden" id="extra-content">
       <h2>Impacto Actual</h2>
       <p>La Agenda 21 transformó el desarrollo sustentable de un ideal teórico a políticas públicas y estrategias locales. Gracias a ella, muchas ciudades y gobiernos aplican planes sustentables que hoy son la base de políticas ambientales modernas.</p>
-      <img src="Agenda-21.jpg" alt="Impacto Agenda 21">
+      <img src="img/Agenda-21.jpg" alt="Impacto Agenda 21">
     </section>
 
     <button id="toggle-btn">Leer más</button>
