--- a/economia.html
+++ b/economia.html
@@ -31,7 +31,7 @@ Por eso, este punto clave explica que el desarrollo sustentable no busca “dete
         <li>Progreso sin dañar el futuro</li>
         <li>Integración de necesidades humanas y cuidado ambiental</li>
       </ul>
-      <img src="Recursos-naturales-ejemplos-e1567033940908.jpg" alt="Equilibrio Sustentable">
+      <img src="img/Recursos-naturales-ejemplos-e1567033940908.jpg" alt="Equilibrio Sustentable">
     </section>
 
     <!-- Bloque 2 -->
@@ -44,7 +44,7 @@ Este punto clave destaca que la sustentabilidad no se trata únicamente de prote
         <li>Evitar la sobreexplotación</li>
         <li>Promover conservación y manejo sostenible</li>
       </ul>
-      <img src="Recursos-naturales-ejemplos-e1567033940908.jpg" alt="Recursos Naturales">
+      <img src="img/Recursos-naturales-ejemplos-e1567033940908.jpg" alt="Recursos Naturales">
     </section>
 
     <!-- Bloque 3 -->
@@ -55,7 +55,7 @@ Este punto clave destaca que la sustentabilidad no se trata únicamente de prote
         <li>Reducción de emisiones y desechos</li>
         <li>Políticas ambientales en sectores productivos</li>
       </ul>
-      <img src="R.jpg" alt="Contaminación">
+      <img src="img/R.jpg" alt="Contaminación">
     </section>
 
     <!-- Bloque 4 -->
@@ -68,7 +68,7 @@ Este punto es clave porque la Agenda 21 reconoce que no basta con reciclar; tamb
         <li>Reducción, reutilización y reciclaje</li>
         <li>Tecnologías limpias en la industria</li>
       </ul>
-      <img src="Consumo-responsable.jpg" alt="Consumo Sustentable">
+      <img src="img/Consumo-responsable.jpg" alt="Consumo Sustentable">
     </section>
 
     <!-- Bloque 5 -->
@@ -81,7 +81,7 @@ Este punto clave resalta que la educación no solo busca informar, sino formar u
         <li>Conciencia ambiental desde escuelas</li>
         <li>Formación de hábitos sustentables</li>
       </ul>
-      <img src="Que-es-la-educacion-ambiental-y-cual-es-su-importancia.jpg" alt="Educación Ambiental">
+      <img src="img/Que-es-la-educacion-ambiental-y-cual-es-su-importancia.jpg" alt="Educación Ambiental">
     </section>
 
     <!-- Bloque 6 -->
@@ -94,7 +94,7 @@ Este punto es clave porque promueve una democracia ambiental, donde se incluya a
         <li>Participación activa de la comunidad</li>
         <li>Inclusión de mujeres, jóvenes e indígenas</li>
       </ul>
-      <img src="MEcanismosParticipacionCiudadana.png" alt="Participación Ciudadana">
+      <img src="img/MEcanismosParticipacionCiudadana.png" alt="Participación Ciudadana">
     </section>
 
     <!-- Bloque 7 -->
@@ -107,7 +107,7 @@ Este punto clave señala que las ciudades sostenibles deben contar con transport
         <li>Mejor transporte y menos contaminación</li>
         <li>Ordenamiento urbano y áreas verdes</li>
       </ul>
-      <img src="R (1).jpg" alt="Ciudades Sustentables">
+      <img src="img/R (1).jpg" alt="Ciudades Sustentables">
     </section>
 
     <!-- Bloque 8 -->
@@ -120,7 +120,7 @@ Este punto clave resalta que los países con mayor desarrollo económico tienen 
         <li>Colaboración internacional</li>
         <li>Apoyo tecnológico y financiero</li>
       </ul>
-      <img src="global-business-partnership-concept-with-handshake-people-globe-background_1120554-42679.png" alt="Cooperación Internacional">
+      <img src="img/global-business-partnership-concept-with-handshake-people-globe-background_1120554-42679.png" alt="Cooperación Internacional">
     </section>
   </main>
 
