--- a/milenio.html
+++ b/milenio.html
@@ -24,7 +24,7 @@
     <section class="content-block">
       <h1>Declaración del Milenio</h1>
       <p>La Declaración del Milenio fue adoptada por la ONU en el año 2000, estableciendo metas de desarrollo humano, reducción de pobreza y cooperación internacional.</p>
-      <img src="odm-1.png" alt="ONU Declaración del Milenio">
+      <img src="img/odm-1.png" alt="ONU Declaración del Milenio">
     </section>
 
     <!-- Bloque de objetivos -->
@@ -55,7 +55,7 @@ Son importantes porque promueven el equilibrio entre el desarrollo económico, l
 
 “La Agenda 21 sentó las bases del desarrollo sostenible en 1992, y los ODS fortalecen y actualizan ese compromiso mediante metas concretas para enfrentar los desafíos actuales. Ambos representan el esfuerzo mundial por lograr un futuro más justo, equilibrado y sostenible.”
 </p>
-      <img src="globehands_picnik.jpg" alt="Objetivos de Desarrollo Sostenible">
+      <img src="img/globehands_picnik.jpg" alt="Objetivos de Desarrollo Sostenible">
       <a href="" class="download-btn" download>Descargar Documento</a>
     </section>
 
