--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="hero-text">
       <h1>Educación para el Desarrollo Sustentable</h1>
       <p>Construyendo un futuro equilibrado entre sociedad, economía y ambiente 🌍</p>
-      <a href="📘 Guía.pdf" class="btn" download>Descargar Guía PDF</a>
+      <a href="docs/📘 Guía.pdf" class="btn" download>Descargar Guía PDF</a>
     </div>
   </section>
 
