--- a/index.html
+++ b/index.html
@@ -29,6 +29,29 @@
       <a href="docs/📘 Guía.pdf" class="btn" download>Descargar Guía PDF</a>
     </div>
   </section>
+<main>
+  <!-- Sección para subir archivos -->
+  <section class="content-block">
+    <h2>Comparte tu propuesta sustentable</h2>
+    <form>
+      <label for="archivo">Sube tu proyecto:</label>
+      <input type="file" id="archivo" name="archivo">
+      <button type="submit" class="btn">Enviar</button>
+    </form>
+  </section>
+
+  <!-- Sección de enlaces informativos -->
+  <section class="content-block">
+    <h2>Recursos informativos</h2>
+    <p>Explora más sobre el desarrollo sustentable en estos sitios:</p>
+    <ul class="links">
+      <li><a href="https://www.un.org/sustainabledevelopment/es/" target="_blank">ONU - Objetivos de Desarrollo Sostenible</a></li>
+      <li><a href="https://www.worldbank.org/es/topic/sustainabledevelopment" target="_blank">Banco Mundial - Desarrollo Sustentable</a></li>
+      <li><a href="https://www.greenpeace.org/mexico/" target="_blank">Greenpeace México</a></li>
+      <li><a href="https://www.gob.mx/semarnat" target="_blank">SEMARNAT - Secretaría de Medio Ambiente (México)</a></li>
+    </ul>
+  </section>
+</main>
 
   <!-- Sección introductoria -->
 <main>
@@ -139,6 +162,9 @@ document.addEventListener("DOMContentLoaded", () => {
     }
   });
 });
+</script>
+<script>
+  
 </script>
   <!-- Footer -->
   <footer>
