--- a/agenda21.html
+++ b/agenda21.html
@@ -46,9 +46,8 @@ La Agenda 21 se organiza en 40 capítulos, agrupados en cuatro grandes bloques. 
         <li>Planeación urbana sostenible</li>
         <li>Participación ciudadana</li>
       </ul>
-      <video controls>
-        <source href="https://youtu.be/WWnwNO_0heQ?si=KKPBaTVwhqUM2eKP" type="video/mp4">
-      </video>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/cWQeSU6eYy4?si=3dTZa7cSf1hwX1yE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+</iframe>
     </section>
 
     <!-- Bloque oculto con "Leer más" -->
